<resources>
    <string name="app_name">UD06_2_JustItBinding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_type">¿Qué tipo de comida quieres?</string>
    <string name="scrollButtonText">Send</string>
    <string name="american">American</string>
    <string name="chicken">Chicken</string>
    <string name="vegan">Vegan</string>
    <string name="cheese">Cheese</string>
    <string name="tomato">Tomato</string>
    <string name="alertSelectType">Elige un tipo de hamburguesa</string>
    <string name="burgerSelected">"Has seleccionado la hamburguesa: "</string>
</resources>