<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderFragment">


    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCollapsing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="4dp"
                android:contentDescription="@string/chicken"
                android:src="@android:drawable/ic_menu_send"
                app:layout_anchor="@id/collapsingToolbar"
                app:layout_anchorGravity="bottom|end" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/burger_monster"
                app:layout_collapseMode="parallax">

            </ImageView>


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/layoutScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/food_type_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/food_type" />

            <RadioGroup
                android:id="@+id/groupBurger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioAmericana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/american" />

                <RadioButton
                    android:id="@+id/radioChicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken" />

                <RadioButton
                    android:id="@+id/radioVegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan" />
            </RadioGroup>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroupExtras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCheese"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTomato"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomato" />
            </com.google.android.material.chip.ChipGroup>

            <!-- <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/scrollButtonText" /> -->
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:contentDescription="@string/chicken"
        android:src="@android:drawable/ic_menu_send" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>